# Sock-Server

./: README.md  deploy.sh  rust_wallet.h
.github/workflows/: deploy.yml
go-server/: .gitignore  go.mod  go.sum  main.go  password.hash  recent_addresses.db  rust_wallet.h
go-server/db/: init.go
go-server/docs/: docs.go  swagger.json  swagger.yaml
rust-wallet-lib/: Cargo.toml  rust_wallet.h
rust-wallet-lib/src/: lib.rs
